Remove MeasurementTemplateValue.